# agent-colosseum

./: .env.example  .gitignore  LICENSE  NEXT_STEPS.md  README.md  mkdocs.yml  pyproject.toml
.cursor/plans/: negotiation_environment_design_d9357dc3.plan.md
.github/workflows/: docs.yml
docs/: index.md
docs/agents/: custom-agents.md  llm-agents.md  overview.md
docs/experiments/: dashboard.md  logging.md  runner.md
docs/games/: first-price-auction.md  overview.md  unfair-split.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: layout.md  types.md
examples/: first_price_auction.py  unfair_split.py
games/: all-pay-auction.yaml  bilateral-trade.yaml  common-agency.yaml  dictator.yaml  first-price-auction.yaml  hold-up.yaml  insurance-moral-hazard.yaml  principal-agent.yaml  provision-point.yaml  public-project.yaml  second-price-auction.yaml  sequential-investment.yaml  trust.yaml  ultimatum.yaml  voluntary-contribution.yaml  war-of-attrition.yaml
research/: Economic_Games_Extended.xlsx  contract-theory-notes.md
src/neg_env/: __init__.py  __main__.py  types.py
src/neg_env/agents/: __init__.py  base.py  framework_base.py  langchain_agent.py  negotiation_llm.py  openrouter_agent.py  random_agent.py
src/neg_env/core/: __init__.py  match.py  runner.py
src/neg_env/experiment/: __init__.py  dashboard.py  runner.py
src/neg_env/games/: __init__.py  auction.py  base.py  builtins.py  fair_split.py  first_price_auction.py  registry.py  split100.py  utils.py
src/neg_env/logging/: __init__.py  match_logger.py
src/neg_env/prompts/: __init__.py  fair_split.py  first_price_auction.py
src/neg_env/server/: __init__.py  mcp_server.py
src/neg_env/spec/: __init__.py  schema.py
tests/: conftest.py  test_agents.py  test_core.py  test_experiment.py  test_game_fair_split.py  test_game_first_price_auction.py  test_game_split100.py  test_logging.py  test_server_mcp.py
