[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neg-env"
version = "0.1.0"
description = "Negotiation environment: framework for multi-agent bargaining and strategy games"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "starlette>=0.27",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
langchain = ["langchain-core>=0.2", "langchain-openai>=0.2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
