[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neg-env"
version = "0.1.0"
description = "Negotiation environment: framework for multi-agent bargaining and strategy games"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Marcello Politi"}]
keywords = ["negotiation", "multi-agent", "game-theory", "llm", "research"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "starlette>=0.27",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
langchain = ["langchain-core>=0.2", "langchain-openai>=0.2"]
opik = ["opik>=1.0"]

[project.urls]
Homepage = "https://site-seven-indol-67.vercel.app"
Documentation = "https://site-seven-indol-67.vercel.app"
Repository = "https://github.com/marcellopoliti/agents-environment"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
